--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "npx vite build && npx esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "postinstall": "chmod -R +x node_modules/.bin/"
   },
   "dependencies": {
     "@fontsource/nunito": "^5.2.6",
