--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "npm-run-all --parallel dev:server dev:client",
     "dev:server": "cross-env NODE_ENV=development tsx -r dotenv/config server/index.ts",
     "dev:client": "vite --force",
-    "build": "vite build && tsc -p tsconfig.json && cp server/package.json dist/package.json",
+    "build": "npx vite build && tsc -p tsconfig.json && cp server/package.json dist/package.json",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push"
